    \itemize{
      \item .
    }
  }
  \subsection{Installation}{
    \itemize{
      \item .
    }
  }
  \subsection{Documentation}{
    \itemize{
      \item .
    }
  }
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item .
    }
  }
  \subsection{New Features}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item .
    }
  }
  \subsection{Internals}{
    \itemize{
      \item .
    }
  }
}
\section{Changes in version 0.5.1 (2025-10-25)}{
  \subsection{Description}{
    \itemize{
      \item David Earn is a contributor.
    }
  }
}
\section{Changes in version 0.5.0 (2025-10-15)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item \code{sir.aoi(\dots, root = \var{function})} is a multiple
      time series object storing the solution until the last root or
      time point.  Attribute \code{root.info} stores details about the
      system at the roots in the format \code{list(tau, state)}.
      Previously, \code{sir.aoi} discarded the solution and returned
      only details about the system at the first root.

      \item \code{sir.aoi(\dots, root = \var{function})} no longer has
      an attribute \code{curvature} storing the curvature of \code{Y} at
      the root.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item \code{sir.aoi(\dots, aggregate = TRUE)} has additional
      columns storing the force of infection, incidence, and the
      curvature of \eqn{Y}.

      \item \code{sir.aoi} accepts new argument \code{eps} in order to
      support equations with equal, nonzero rates of birth and death.

      \item \code{sir.aoi} accepts new arguments \code{F} and
      \code{Fargs}, enabling the user to set a forcing function.

      \item \code{sir.aoi} accepts new arguments \code{H} and
      \code{Hargs}, enabling the user to set a susceptible
      hetereogeneity function.
